Complete authentication and tweet features: - User registration and authentication (login/logout) - Tweet create, edit, and delete functionality - View other users' tweets - Fixed logout button by separating nested forms

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,18 @@ Thumbs.db
 
    
 
+# Ignore Python venv
+.venv/
+venv/
+.tweetvenv/
+
+# Ignore SQLite database
+db.sqlite3
+
+# Ignore other Python junk
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+# Ignore SQLite database
+*.sqlite3
